I'm a little suspicious of FibonacciHeap's performance; trying PQ again.